style.css
/*!
Theme Name: MP Academy
Theme URI: https://github.com/naderbassily/mp-academy
Author: MP Academy Team
Description: Custom LearnDash theme for MP Academy built with the Franklin Design System.
Version: 1.0.4
Requires at least: 6.4
Tested up to: 6.8
Requires PHP: 7.4
License: GNU General Public License v2 or later
License URI: LICENSE
Text Domain: mp-academy
*/

/* Make card wrapper flex column */
.c-card__wrapper {
  display: flex;
  flex-direction: column;
  height: 100%;
}

/* Let primary section grow to fill available space */
.c-card__primary {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
}

/* Push footer to bottom */
.c-card__footer {
  margin-top: auto;
}

.c-card {
border-radius: 0px;
}

.mp-search-empty {
  max-width: 33rem;
  margin: 0 auto;
  padding: 3rem 0 1rem;
}

.mp-search-empty__icon {
  width: 7.5rem;
  height: auto;
  margin: 0 auto 1.5rem;
  display: block;
}

.mp-search-empty__title {
  margin-bottom: 1rem;
  color: #005f73;
}

.mp-search-empty__copy {
  margin: 0;
  font-size: 1.125rem;
  line-height: 1.6;
  color: #334155;
}

.mp-search-empty__actions {
  margin: 1.5rem 0 0;
}

